--- a/SalesInventorySystem/SalesInventorySystem.csproj
+++ b/SalesInventorySystem/SalesInventorySystem.csproj
@@ -1159,6 +1159,12 @@
     <Compile Include="HOFormsDevEx\InventoryAdjustmentDevEx.Designer.cs">
       <DependentUpon>InventoryAdjustmentDevEx.cs</DependentUpon>
     </Compile>
+    <Compile Include="HOFormsDevEx\InventoryConversion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HOFormsDevEx\InventoryConversion.Designer.cs">
+      <DependentUpon>InventoryConversion.cs</DependentUpon>
+    </Compile>
     <Compile Include="HOFormsDevEx\InventoryCost.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1548,6 +1554,12 @@
     </Compile>
     <Compile Include="HOForms\HeadOfficeInventory.Designer.cs">
       <DependentUpon>HeadOfficeInventory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HOForms\HOConversionPOS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HOForms\HOConversionPOS.Designer.cs">
+      <DependentUpon>HOConversionPOS.cs</DependentUpon>
     </Compile>
     <Compile Include="HOForms\HOConversion.cs">
       <SubType>Form</SubType>
@@ -2240,6 +2252,12 @@
     <Compile Include="POS\AddDiscount.Designer.cs">
       <DependentUpon>AddDiscount.cs</DependentUpon>
     </Compile>
+    <Compile Include="POS\AddDiscountRestaurant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\AddDiscountRestaurant.Designer.cs">
+      <DependentUpon>AddDiscountRestaurant.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS\AuthorizedConfirmationFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2311,6 +2329,12 @@
     </Compile>
     <Compile Include="POS\POSConfirmPayment.Designer.cs">
       <DependentUpon>POSConfirmPayment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSConfirmPaymentResto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSConfirmPaymentResto.Designer.cs">
+      <DependentUpon>POSConfirmPaymentResto.cs</DependentUpon>
     </Compile>
     <Compile Include="POS\POSConfirmPaymentWithKeyboard.cs">
       <SubType>Form</SubType>
@@ -2390,6 +2414,12 @@
     <Compile Include="POS\POSLoader.Designer.cs">
       <DependentUpon>POSLoader.cs</DependentUpon>
     </Compile>
+    <Compile Include="POS\POSMainRestoDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSMainRestoDashboard.Designer.cs">
+      <DependentUpon>POSMainRestoDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS\POSMainWithDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2414,6 +2444,12 @@
     <Compile Include="POS\POSPaytoMerchant.Designer.cs">
       <DependentUpon>POSPaytoMerchant.cs</DependentUpon>
     </Compile>
+    <Compile Include="POS\POSplitBillFinal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSplitBillFinal.Designer.cs">
+      <DependentUpon>POSplitBillFinal.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS\POSRefund.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2431,6 +2467,36 @@
     </Compile>
     <Compile Include="POS\POSReprintReport.Designer.cs">
       <DependentUpon>POSReprintReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSRestoAuthentication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSRestoAuthentication.Designer.cs">
+      <DependentUpon>POSRestoAuthentication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSRestoDineInBilling.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSRestoDineInBilling.Designer.cs">
+      <DependentUpon>POSRestoDineInBilling.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSRestoFinalBilling.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSRestoFinalBilling.Designer.cs">
+      <DependentUpon>POSRestoFinalBilling.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSRestoTableOption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSRestoTableOption.Designer.cs">
+      <DependentUpon>POSRestoTableOption.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS\POSRestoTables.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS\POSRestoTables.Designer.cs">
+      <DependentUpon>POSRestoTables.cs</DependentUpon>
     </Compile>
     <Compile Include="POS\POSScreenMirror.cs">
       <SubType>Form</SubType>
@@ -2667,6 +2733,12 @@
     </Compile>
     <Compile Include="Reporting\BIR\POSSalesReportSummary.Designer.cs">
       <DependentUpon>POSSalesReportSummary.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reporting\BIR\SalesDetailsComparative.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reporting\BIR\SalesDetailsComparative.Designer.cs">
+      <DependentUpon>SalesDetailsComparative.cs</DependentUpon>
     </Compile>
     <Compile Include="Reporting\BIR\VATInput.cs">
       <SubType>Form</SubType>
@@ -3339,6 +3411,9 @@
     <EmbeddedResource Include="HOFormsDevEx\InventoryAdjustmentDevEx.resx">
       <DependentUpon>InventoryAdjustmentDevEx.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HOFormsDevEx\InventoryConversion.resx">
+      <DependentUpon>InventoryConversion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HOFormsDevEx\InventoryCost.resx">
       <DependentUpon>InventoryCost.cs</DependentUpon>
     </EmbeddedResource>
@@ -3532,6 +3607,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HOForms\HeadOfficeInventory.resx">
       <DependentUpon>HeadOfficeInventory.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HOForms\HOConversionPOS.resx">
+      <DependentUpon>HOConversionPOS.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="HOForms\HOConversion.resx">
@@ -3888,6 +3967,9 @@
     <EmbeddedResource Include="POS\AddDiscount.resx">
       <DependentUpon>AddDiscount.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="POS\AddDiscountRestaurant.resx">
+      <DependentUpon>AddDiscountRestaurant.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="POS\AuthorizedConfirmationFrm.resx">
       <DependentUpon>AuthorizedConfirmationFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -3924,6 +4006,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="POS\POSConfirmPayment.resx">
       <DependentUpon>POSConfirmPayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POS\POSConfirmPaymentResto.resx">
+      <DependentUpon>POSConfirmPaymentResto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POS\POSConfirmPaymentWithKeyboard.resx">
       <DependentUpon>POSConfirmPaymentWithKeyboard.cs</DependentUpon>
@@ -3964,6 +4049,9 @@
     <EmbeddedResource Include="POS\POSLoader.resx">
       <DependentUpon>POSLoader.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="POS\POSMainRestoDashboard.resx">
+      <DependentUpon>POSMainRestoDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="POS\POSMainWithDashboard.resx">
       <DependentUpon>POSMainWithDashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -3984,6 +4072,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="POS\POSReprintReport.resx">
       <DependentUpon>POSReprintReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POS\POSRestoAuthentication.resx">
+      <DependentUpon>POSRestoAuthentication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POS\POSRestoDineInBilling.resx">
+      <DependentUpon>POSRestoDineInBilling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POS\POSRestoFinalBilling.resx">
+      <DependentUpon>POSRestoFinalBilling.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POS\POSScreenMirror.resx">
       <DependentUpon>POSScreenMirror.cs</DependentUpon>
@@ -4108,6 +4205,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reporting\BIR\POSSalesReportSummary.resx">
       <DependentUpon>POSSalesReportSummary.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reporting\BIR\SalesDetailsComparative.resx">
+      <DependentUpon>SalesDetailsComparative.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reporting\BIR\VATInput.resx">
       <DependentUpon>VATInput.cs</DependentUpon>
