--- a/SalesInventorySystem/SalesInventorySystem.csproj
+++ b/SalesInventorySystem/SalesInventorySystem.csproj
@@ -2030,6 +2030,12 @@
     <Compile Include="Orders\AddBranchOrderSTS.Designer.cs">
       <DependentUpon>AddBranchOrderSTS.cs</DependentUpon>
     </Compile>
+    <Compile Include="Orders\AddBranchOrderSTSBatchMode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Orders\AddBranchOrderSTSBatchMode.Designer.cs">
+      <DependentUpon>AddBranchOrderSTSBatchMode.cs</DependentUpon>
+    </Compile>
     <Compile Include="Orders\AddOrder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -3856,6 +3862,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Orders\AddBranchOrderSTS.resx">
       <DependentUpon>AddBranchOrderSTS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Orders\AddBranchOrderSTSBatchMode.resx">
+      <DependentUpon>AddBranchOrderSTSBatchMode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Orders\AddOrder.resx">
       <DependentUpon>AddOrder.cs</DependentUpon>
