--- a/SalesInventorySystem/SalesInventorySystem.csproj
+++ b/SalesInventorySystem/SalesInventorySystem.csproj
@@ -2897,6 +2897,14 @@
     <Compile Include="RibbonForm2.Designer.cs">
       <DependentUpon>RibbonForm2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sabong\SBDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sabong\SBDashboard.Designer.cs">
+      <DependentUpon>SBDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SalesModel\SaleDto.cs" />
+    <Compile Include="SalesModel\SalesDataDto.cs" />
     <Compile Include="SampleForm.cs">
       <SubType>Form</SubType>
     </Compile>
